--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "zod": "3.25.76"
+    "zod": "3.25.76",
     "framer-motion": "^12.0.0"
   },
   "devDependencies": {
